# privacy_predictions_market

./: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/create/: page.tsx
app/src/app/market/[address]/: page.tsx
app/src/components/: connect-wallet.tsx  navbar.tsx  tx-link.tsx  wallet-button.tsx  wallet-provider.tsx
app/src/components/prediction/: AssetSelector.tsx  EncryptedRangeInput.tsx  PriceChart.tsx
app/src/hooks/: useMarket.ts
app/src/lib/: idl.json  program.ts
programs/predictions-market/: Cargo.toml
programs/predictions-market/src/: constants.rs  error.rs  lib.rs
programs/predictions-market/src/instructions/: claim_prize.rs  evaluate_bet.rs  initialize_market.rs  mod.rs  settle_market.rs  submit_bet.rs
programs/predictions-market/src/state/: mod.rs
programs/private-lottery/: Cargo.toml
programs/private-lottery/src/: error.rs  lib.rs
programs/private-lottery/src/instructions/: check_winner.rs  create_lottery.rs  draw_winner.rs  mod.rs  withdraw_prize.rs
programs/private-lottery/src/state/: mod.rs
programs/private-raffle/src/: lib.rs
tests/: prediction-market-logic.ts  prediction-market.ts  private-lottery.ts
