[package]
name = "range-prediction-market"
version = "0.1.0"
description = "Confidential range prediction market using Inco Lightning"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "range_prediction_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
pyth-solana-receiver-sdk = "0.6.1"
inco-lightning = { version = "0.1.4", features = ["cpi"] }
pyth-sdk-solana = "0.10.0"
